# KEA_1.Semester_AI

./: .gitignore
00._Jupyter_test/ipynp_test/: 01._test.ipynb  02._test.ipynb
00._Jupyter_test/ipynp_test/Datasets/: minifigs.csv
00._Mandatory_Assignments/01._Mandatory_Assignment_1/: Mandatory_Assignment_1.py  Mandatory_Assignment_1_Logistic_Regression.py  Mandatory_Assignment_1_Regression.py  Test.py  dnn_model.keras  utils.py
00._Mandatory_Assignments/01._Mandatory_Assignment_1/myenv/: pyvenv.cfg
00._Mandatory_Assignments/02._Mandatory_Assignment_2/: AsteroidsTrainer.py  README.md
00._Mandatory_Assignments/02._Mandatory_Assignment_2/Asteroids/: Asteroid.py  Asteroids.py  Bullet.py  Player.py  Utils.py
00._Mandatory_Assignments/02._Mandatory_Assignment_2/models/: best_model.pkl
01._Lecture_6/: SIMD.ipynb  pyproject.toml  wealth-income.html  wealth-income.ipynb
02._Lecture_9/: Simple_Regression.ipynb  pyproject.toml
03._Lecture_10/: Predict_XOR.py  Training_Models.py  pyproject.toml
04._Lecture_7/: California_housing_prices.py  Danish_housing_dataset.py  pyproject.toml
05._Lecture_15/: Deep_Neural_Network.py  pyproject.toml
06._Lecture_16/: MNIST_Classification_in_Tensorflow.py  Untitled.ipynb  Untitled.py
06._Lecture_16/myenv/: pyvenv.cfg
07._Lecture_17/: Breast_Cancer_Dataset.ipynb  Decision_Trees_and_Random_Forest.ipynb  utils.py
08._Lecture_14/: ECG-EKG_Anomalies.ipynb
09._Workshop/01._Lecture_18/: Darwin.ipynb
09._Workshop/02._Lecture_20/: Traveling_salesman.ipynb  species.py
Jupyter/ipynp_test/: 02._test.ipynb  pyproject.toml  test.ipynb
(+2 files in other folders)
