[project]
name = "05-lecture-15"
version = "0.1.0"
description = ""
authors = [
    {name = "Oliver Bresson",email = "ob@beezy365.com"}
]
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
    "marimo (<0.12.0)",
    "scikit-learn (<2.0.0)",
    "matplotlib (<4.0.0)",
    "numpy (>=1.35.0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "05"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
